// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton 1`] = `
<div
  className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
>
  <label
    className="label"
    htmlFor="id"
  >
    <div
      className="box paddingX1"
    >
      <div
        className="BgEnabled Border BorderUnchecked sizeMd RadioButton"
      >
        <input
          checked={false}
          className="input sizeMd InputEnabled"
          disabled={false}
          id="id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="radio"
          value=""
        />
      </div>
    </div>
  </label>
  <div
    className="box"
  >
    <label
      className="label"
      htmlFor="id"
    >
      <div
        className="box paddingX1"
        style={
          Object {
            "marginTop": "2px",
          }
        }
      >
        <div
          className="default alignStart breakWord Text fontSize300 fontWeightNormal"
        >
          Name
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`RadioButton checked 1`] = `
<div
  className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
>
  <label
    className="label"
    htmlFor="id"
  >
    <div
      className="box paddingX1"
    >
      <div
        className="BgEnabled BorderSelected BorderCheckedMd sizeMd RadioButton"
      >
        <input
          checked={true}
          className="input sizeMd InputEnabled"
          disabled={false}
          id="id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="radio"
          value=""
        />
      </div>
    </div>
  </label>
  <div
    className="box"
  />
</div>
`;

exports[`RadioButton disabled 1`] = `
<div
  className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
>
  <label
    className="label"
    htmlFor="id"
  >
    <div
      className="box paddingX1"
    >
      <div
        className="BgDisabled Border BorderDisabled sizeMd RadioButton"
      >
        <input
          checked={false}
          className="input sizeMd"
          disabled={true}
          id="id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="radio"
          value=""
        />
      </div>
    </div>
  </label>
  <div
    className="box"
  >
    <label
      className="label"
      htmlFor="id"
    >
      <div
        className="box paddingX1"
        style={
          Object {
            "marginTop": "2px",
          }
        }
      >
        <div
          className="subtle alignStart breakWord Text fontSize300 fontWeightNormal"
        >
          Name
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`RadioButton disabled small 1`] = `
<div
  className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
>
  <label
    className="label"
    htmlFor="id"
  >
    <div
      className="box paddingX1"
    >
      <div
        className="BgDisabled Border BorderDisabled sizeSm RadioButton"
      >
        <input
          checked={false}
          className="input sizeSm"
          disabled={true}
          id="id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="radio"
          value=""
        />
      </div>
    </div>
  </label>
  <div
    className="box"
  >
    <label
      className="label"
      htmlFor="id"
    >
      <div
        className="box paddingX1"
        style={
          Object {
            "marginTop": "-1px",
          }
        }
      >
        <div
          className="subtle alignStart breakWord Text fontSize200 fontWeightNormal"
        >
          Name
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`RadioButton small 1`] = `
<div
  className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
>
  <label
    className="label"
    htmlFor="id"
  >
    <div
      className="box paddingX1"
    >
      <div
        className="BgEnabled Border BorderUnchecked sizeSm RadioButton"
      >
        <input
          checked={false}
          className="input sizeSm InputEnabled"
          disabled={false}
          id="id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="radio"
          value=""
        />
      </div>
    </div>
  </label>
  <div
    className="box"
  >
    <label
      className="label"
      htmlFor="id"
    >
      <div
        className="box paddingX1"
        style={
          Object {
            "marginTop": "-1px",
          }
        }
      >
        <div
          className="default alignStart breakWord Text fontSize200 fontWeightNormal"
        >
          Name
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`RadioButton with image 1`] = `
<div
  className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
>
  <label
    className="label"
    htmlFor="id"
  >
    <div
      className="box paddingX1"
    >
      <div
        className="BgEnabled Border BorderUnchecked sizeSm RadioButton"
      >
        <input
          checked={false}
          className="input sizeSm InputEnabled"
          disabled={false}
          id="id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="radio"
          value=""
        />
      </div>
    </div>
  </label>
  <div
    className="box paddingX1"
  >
    <div
      className="box"
    >
      <div
        className="box relative"
        style={
          Object {
            "backgroundColor": "transparent",
            "paddingBottom": "100%",
          }
        }
      >
        <img
          alt=""
          className="img"
          fetchpriority="auto"
          loading="auto"
          onError={[Function]}
          onLoad={[Function]}
          src="https://i.ibb.co/FY2MKr5/stock6.jpg"
        />
      </div>
    </div>
  </div>
  <div
    className="box"
  >
    <label
      className="label"
      htmlFor="id"
    >
      <div
        className="box paddingX1"
        style={
          Object {
            "marginTop": "-1px",
          }
        }
      >
        <div
          className="default alignStart breakWord Text fontSize200 fontWeightNormal"
        >
          Name
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`RadioButton with subtext 1`] = `
<div
  className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
>
  <label
    className="label"
    htmlFor="id"
  >
    <div
      className="box paddingX1"
    >
      <div
        className="BgEnabled Border BorderUnchecked sizeSm RadioButton"
      >
        <input
          checked={false}
          className="input sizeSm InputEnabled"
          disabled={false}
          id="id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="radio"
          value=""
        />
      </div>
    </div>
  </label>
  <div
    className="box"
  >
    <label
      className="label"
      htmlFor="id"
    >
      <div
        className="box paddingX1"
        style={
          Object {
            "marginTop": "-1px",
          }
        }
      >
        <div
          className="default alignStart breakWord Text fontSize200 fontWeightNormal"
        >
          Name
        </div>
      </div>
    </label>
    <div
      className="box paddingX1 paddingY1"
    >
      <div
        className="subtle alignStart breakWord Text fontSize200 fontWeightNormal"
      >
        More Info
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioButton without label 1`] = `
<div
  className="box marginEndN1 marginStartN1 xsDisplayFlex xsItemsStart"
>
  <label
    className="label"
    htmlFor="id"
  >
    <div
      className="box paddingX1"
    >
      <div
        className="BgEnabled Border BorderUnchecked sizeMd RadioButton"
      >
        <input
          checked={false}
          className="input sizeMd InputEnabled"
          disabled={false}
          id="id"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="radio"
          value=""
        />
      </div>
    </div>
  </label>
  <div
    className="box"
  />
</div>
`;
